# BoardPilotService

./: .gitmodules  CMakeLists.txt  api.md  install.sh  readme.md
include/: bpapi.h  bpapi_msg.h  bpdef.h  bpdev.h  zmk_control.h
misc/: hidergod-service.service
src/: CMakeLists.txt  bpapi.c  bpapi_msg.c  bpdev.c  bpservice.c  heapi.c  heapi.h  heapi_msg.c  heapi_msg.h  hedef.h  hedev.c  hedev.h  hedev_msg.c  hedev_msg.h  hidergod.c  zmk_control.c  zmk_control.h
src/cJSON/: CMakeLists.txt
