add_executable(hidergodm hidergod.c)
target_sources(hidergodm PRIVATE hedev.c)
target_sources(hidergodm PRIVATE heapi.c)
target_sources(hidergodm PRIVATE zmk_control.c)
target_sources(hidergodm PRIVATE heapi_msg.c)

# NOTE: no `find_package` is required, since HIDAPI targets are already a part of the project tree
if (UNIX)
  target_compile_options(hidergodm PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-format-truncation)
  target_link_libraries(hidergodm PRIVATE hidapi::hidraw)
endif (UNIX)
if (WIN32)
  target_link_libraries(hidergodm PRIVATE hidapi::hidapi)
  target_compile_options(hidergodm PRIVATE /W4 /WX)
endif (WIN32)